--- a/publications/theses/vargas2020_phd.bib
+++ b/publications/theses/vargas2020_phd.bib
@@ -2,7 +2,7 @@
   author       = {Elizabeth Vargas}, 
   title        = {Acoustic Source Localisation in Constrained Environments},
   school       = {Heriot-Watt University},
-  year         = 2020,
-  address      = {Edinburgh, United Kigdom},
-  month        = 2
+  month        = {February},
+  year         = {2020},
+  address      = {Edinburgh, United Kigdom}
   }
