--- a/publications/journals/vargas2021_taslp.bib
+++ b/publications/journals/vargas2021_taslp.bib
@@ -3,9 +3,8 @@
   journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing}, 
   title={On Improved Training of CNN for Acoustic Source Localisation}, 
   year={2021},
-  volume={},
+  volume={29},
   number={},
-  pages={1-1},
+  pages={720-732},
   doi={10.1109/TASLP.2021.3049337},
-  ISSN={2329-9304},
-  month={},}
+  ISSN={2329-9304}}
