--- a/publications/conferences/vargas2012_lacnem.bib
+++ b/publications/conferences/vargas2012_lacnem.bib
@@ -1,4 +1,4 @@
-@inproceedings{vargascorresponding,
+@inproceedings{vargas2012corresponding,
   title=	{A corresponding points classification approach by Delaunay triangulation},
   author=	{Vargas, Elizabeth and Trujillo, Maria},
   booktitle={Latin American Conference on Networked and Electronic Media (LACNEM)},
