--- a/publications/conferences/vargas2021_icra.bib
+++ b/publications/conferences/vargas2021_icra.bib
@@ -1,4 +1,4 @@
-@inproceedings{vargas2021,
+@inproceedings{vargas2021robust,
   title=	{Robust Underwater Visual SLAM Fusing Acoustic Sensing},
   author=	{Vargas, Elizabeth and Scona, Raluca and Scharff Wilners, Jonatan, and Luczynski, Tomasz, and Cao, Yu, and Wang, Sen, and Petillot, Yvan R.},
   booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
