--- a/publications/preprints/luczynski2021arxiv.bib
+++ b/publications/preprints/luczynski2021arxiv.bib
@@ -1,4 +1,4 @@
-@inproceedings{vargas2021,
+@inproceedings{luczynski2021underwater,
   title=	{Underwater Inspection and Intervention Dataset},
   author=	{Luczynski, Tomasz and Scharff Wilners, Jonatan and Vargas, Elizabeth and Roe, Joshua and Xu, Shida and Cao, Yu, and Wang, Sen, and Petillot, Yvan R.},
   booktitle={arXiv},
